<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_detail_back" />

            <Button
                android:id="@+id/activity_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/activity_detail_back"
                android:layout_toLeftOf="@id/activity_detail_edit"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:onClick="showDatePicker"
                />

            <EditText
                android:id="@+id/activity_detail_date_input"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/activity_detail_back"
                android:layout_toLeftOf="@id/activity_detail_edit"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                />

            <Button
                android:id="@+id/activity_detail_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:text="@string/activity_detail_edit" />

            <Button
                android:id="@+id/activity_detail_back_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_detail_back_detail" />

            <Button
                android:id="@+id/activity_detail_save"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:text="@string/activity_detail_save" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_detail_profile"
                android:layout_width="75dp"
                android:layout_height="77dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/activity_detail_profile_add"
                android:visibility="gone"
                android:layout_width="79dp"
                android:layout_height="75dp"
                android:layout_marginStart="16dp"
                android:text="@string/activity_detail_profile_add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_detail_picture"
                android:layout_width="109dp"
                android:layout_height="98dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/activity_detail_picture_add"
                android:visibility="gone"
                android:layout_width="113dp"
                android:layout_height="98dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/activity_detail_picture_add" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_detail_diary"
            android:layout_width="339dp"
            android:layout_height="264dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/make_edge" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>