<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_detail">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/activity_pet_add_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/make_edge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_pet_add_name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:text="@string/activity_pet_add_name" />

            <EditText
                android:id="@+id/activity_pet_add_name_input"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:ems="8"
                android:inputType="textPersonName"
                android:layout_toRightOf="@id/activity_pet_add_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="Name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/activity_pet_add_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/activity_pet_add_dog" />

            <CheckBox
                android:id="@+id/activity_pet_add_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/activity_pet_add_dog"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/activity_pet_add_cat" />

            <CheckBox
                android:id="@+id/activity_pet_add_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/activity_pet_add_cat"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/activity_pet_add_etc" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_pet_add_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/activity_pet_add_birth" />
            <TextView
                android:id="@+id/activity_detail_birth_output"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/activity_pet_add_birth"
                />
            <Button
                android:id="@+id/activity_detail_birth_input"
                android:background="@android:color/transparent"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/activity_pet_add_birth"
                android:onClick="showDatePicker" />

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>